# weird_sandbox

./: .gitignore  CMakeLists.txt  README.md  setup_libs.py
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/base/: base_arena.cpp  base_arena.h  base_core.h  base_entry.cpp  base_inc.cpp  base_inc.h  base_log.h  base_math.h  base_types.h
src/engine/: engine_core.cpp  engine_core.h  engine_entry.cpp  engine_entry.h  engine_main.cpp
src/game/: game_main.cpp
src/os/: os_core.cpp  os_core.h  os_inc.cpp  os_inc.h
src/os/core/: os_core.cpp  os_core.h
src/os/core/linux/: os_core_linux.cpp  os_core_linux.h
src/os/core/win32/: os_core_win32.cpp  os_core_win32.h
src/os/gfx/: os_gfx.h
src/os/gfx/glfw/: os_gfx_glfw.cpp
src/os/glfw/: os_impl_glfw.cpp  os_impl_glfw.h
src/render/: render_core.cpp  render_core.h  render_inc.h
src/render/opengl/: render_impl_gl_core.cpp
